<?xml version="1.0"?>
<package>
  <name>mc_rtc_naoqi_ros</name>
  <version>0.0.0</version>
  <description>The mc_rtc_naoqi_ros package</description>

  <maintainer email="bolotnikov@lirmm.fr">Anastasia Bolotnikova</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf</build_depend>
  <build_depend>naoqi_libqi</build_depend>
  <build_depend>naoqi_libqicore</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>tf</run_depend>
  <run_depend>naoqi_libqi</run_depend>
  <run_depend>naoqi_libqicore</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
  
</package>
